--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,39 +1,39 @@
 ---
 layout: default
 ---
-{% if post.accent_color %}{% capture accent_color %}{{ post.accent_color }}{% endcapture %}{% endif %}
+
+{% if post.accent_color %}
+  {% capture accent_color %}{{ post.accent_color }}{% endcapture %}
+{% endif %}
+
 <div class="page-post">
-
-	<header class="post__header header--single" style="--accent: {{ accent_color }}">
-		
-		<div class="wrap">
-			<h1 class="post__title">{{ page.title }}</h1>
-			<time class="post__date label">{{ page.date | date_to_long_string }}</time>
-		</div>
-
-		<img src="{{ page.featured_image | relative_url }}" class="post__featured-image">
-
-	</header>
-
-	<section class="post-full">
-
-		<div class="wrap">
-
-			<article class="post__content {% if page.highlight_first %}highlight-first{% endif %}">
-				{{ page.content }}
-			</article>
-
-			<div class="post__more grid">
-				{% if page.previous.url %}
-				<a class="prev-post subtitle" href="{{ page.previous.url | relative_url }}">{{page.previous.title}}</a>
-				{% endif %}
-				{% if page.next.url %}
-				<a class="next-post subtitle" href="{{ page.next.url | relative_url }}">{{ page.next.title }}</a>
-				{% endif %}
-			</div>
-
-		</div>
-
-	</section>
-
+  <header class="post__header header--single" style="--accent: {{ accent_color }}">
+    <div class="wrap">
+      <h1 class="post__title">{{ page.title }}</h1>
+      <time class="post__date label">{{ page.date | date_to_long_string }}</time>
+    </div>
+    <img src="{{ page.featured_image | relative_url }}" class="post__featured-image">
+  </header>
+  <section class="post-full">
+    <div class="wrap">
+      <article class="post__content {% if page.highlight_first %}highlight-first{% endif %}">
+        {{ page.content }}
+      </article>
+      <div class="post__more grid">
+        {% assign tags = post.tags %}
+        {% if page.previous.url %}
+          {% assign prev_tags = page.previous.tags %}
+          {% if prev_tags.size == 0 or tags.size == 0 or prev_tags | where_exp: "tag", "tags contains tag" | size > 0 %}
+            <a class="prev-post subtitle" href="{{ page.previous.url | relative_url }}">{{page.previous.title}}</a>
+          {% endif %}
+        {% endif %}
+        {% if page.next.url %}
+          {% assign next_tags = page.next.tags %}
+          {% if next_tags.size == 0 or tags.size == 0 or next_tags | where_exp: "tag", "tags contains tag" | size > 0 %}
+            <a class="next-post subtitle" href="{{ page.next.url | relative_url }}">{{ page.next.title }}</a>
+          {% endif %}
+        {% endif %}
+      </div>
+    </div>
+  </section>
 </div>
