--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
         {% assign previous_post = nil %}
         {% assign next_post = nil %}
         {% for post in site.posts %}
-          {% if post.tags contains page.tags %}
+          {% if post.tags contains page.tags[0] %}
             {% if post.date < page.date %}
               {% if previous_post == nil or previous_post.date < post.date %}
                 {% assign previous_post = post %}
