--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,47 +1,38 @@
 ---
 layout: default
 ---
-
-{% if post.accent_color %}
-  {% capture accent_color %}{{ post.accent_color }}{% endcapture %}
-{% endif %}
-
 <div class="page-post">
-  <header class="post__header header--single" style="--accent: {{ accent_color }}">
-    <div class="wrap">
-      <h1 class="post__title">{{ page.title }}</h1>
-      <time class="post__date label">{{ page.date | date_to_long_string }}</time>
-    </div>
-    <img src="{{ page.featured_image | relative_url }}" class="post__featured-image">
-  </header>
-  <section class="post-full">
-    <div class="wrap">
-      <article class="post__content {% if page.highlight_first %}highlight-first{% endif %}">
-        {{ page.content }}
-      </article>
-      <div class="post__more grid">
-        {% assign previous_post = nil %}
-        {% assign next_post = nil %}
-        {% for post in site.posts %}
-          {% if post.tags contains page.tags[0] %}
-            {% if post.date < page.date %}
-              {% if previous_post == nil or previous_post.date < post.date %}
-                {% assign previous_post = post %}
-              {% endif %}
-            {% else %}
-              {% if next_post == nil or next_post.date > post.date %}
-                {% assign next_post = post %}
-              {% endif %}
-            {% endif %}
-          {% endif %}
-        {% endfor %}
-        {% if previous_post %}
-          <a class="prev-post subtitle" href="{{ previous_post.url | relative_url }}">{{ previous_post.title }}</a>
-        {% endif %}
-        {% if next_post %}
-          <a class="next-post subtitle" href="{{ next_post.url | relative_url }}">{{ next_post.title }}</a>
-        {% endif %}
-      </div>
-    </div>
-  </section>
+
+	<header class="post__header header--single">
+		
+		<div class="wrap">
+			<h1 class="post__title">{{ page.title }}</h1>
+			<time class="post__date label">{{ page.date | date_to_long_string }}</time>
+		</div>
+
+		<img src="{{ page.featured_image | relative_url }}" class="post__featured-image">
+
+	</header>
+
+	<section class="post-full">
+
+		<div class="wrap">
+
+			<article class="post__content {% if page.highlight_first %}highlight-first{% endif %}">
+				{{ page.content }}
+			</article>
+
+			<div class="post__more grid">
+				{% if page.previous.url %}
+				<a class="prev-post subtitle" href="{{ page.previous.url | relative_url }}">{{page.previous.title}}</a>
+				{% endif %}
+				{% if page.next.url %}
+				<a class="next-post subtitle" href="{{ page.next.url | relative_url }}">{{ page.next.title }}</a>
+				{% endif %}
+			</div>
+
+		</div>
+
+	</section>
+
 </div>
