--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -10,7 +10,7 @@ layout: default
 
 		<div class="wrap">
 			<h1 class="post__title">{{ page.title }}</h1>
-			<h2 class="post__subtitle subtitle--light">{{ page.subtitle }}</h2>
+			<h2 class="post__subtitle subtitle--light">{{ page.description }}</h2>
 		</div>
 
 		<img src="{{ '/images/projects/' | relative_url}}{{ page.featured_image }}" class="post__featured-image">
