--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -9,6 +9,7 @@ layout: default
 	<header class="post__header header--single">
 
 		<div class="wrap">
+			<h1 class="post__title">{{ page.title }}</h1>
 			<h2 class="post__subtitle subtitle--light">{{ page.description }}</h2>
 		</div>
 
